--- a/eThorWebApp.Client/wwwroot/css/site.css
+++ b/eThorWebApp.Client/wwwroot/css/site.css
@@ -1,4 +1,5 @@
 ﻿@import url(../lib/bootstrap/dist/css/bootstrap.min.css);
+@import url(../lib/material-design-iconic-font/css/material-design-iconic-font.min.css);
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 html, body {
